Closed
Bug 1152890
Opened 11 years ago
Closed 11 years ago
Plugin streams missing transition to eNewStreamCalled
Categories
(Core Graveyard :: Plug-ins, defect)
Core Graveyard
Plug-ins
Tracking
(firefox38 disabled, firefox39 fixed, firefox40 fixed)
RESOLVED
FIXED
mozilla40
People
(Reporter: bugzilla, Assigned: bugzilla)
References
Details
Attachments
(1 file)
|
1.13 KB,
patch
|
jimm
:
review+
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
No description provided.
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8590379 -
Flags: review?(jmathies)
Updated•11 years ago
|
Attachment #8590379 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 2•11 years ago
|
||
Comment on attachment 8590379 [details] [diff] [review]
Add missing transition
Approval Request Comment
[Feature/regressing bug #]: async plugin init
[User impact if declined]: crashes and/or prematurely terminated plugin streams resulting in plugin errors
[Describe test coverage new/current, TreeHerder]: Locally
[Risks and why]: None, trivial patch
[String/UUID change made/needed]: None
Attachment #8590379 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 3•11 years ago
|
||
status-firefox38:
--- → disabled
status-firefox39:
--- → affected
Comment 4•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Comment 5•11 years ago
|
||
Comment on attachment 8590379 [details] [diff] [review]
Add missing transition
Approved for uplift to aurora as we hope this will fix some plugin crashes.
Attachment #8590379 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 6•11 years ago
|
||
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•