Bug 1152890 - Add missing state transition to nsNPAPIPluginStreamListener. r=jimm, a=lizzard